--- a/MySelfIntroduction/MySelfIntroduction.html
+++ b/MySelfIntroduction/MySelfIntroduction.html
@@ -22,7 +22,7 @@
 	<li>Watching soccer games</li>
 </ul>
 <h2>My Hoods</h2>
-<p>Happy: <img src="images/happy.jpg" alt="happy" width="200" height="200"> Sad: <img src="images/sad.jpg" alt="sad" width="200" height="200"></p>
+<p>Happy: <img src="happy.jpg" alt="happy" width="200" height="200"> Sad: <img src="sad.jpg" alt="sad" width="200" height="200"></p>
 <h2>My Best Friends</h2>
 <ul>
 	<li>Qian Ze: An sunny boy who plays basketball very well.</li>
